<resources>
    <string name="app_name">Davomat App</string>
    <string name="home">Bosh sahifa</string>
    <string name="student">Student</string>
    <string name="setting">Sozlamalar</string>
    <string name="sign_up">Ro\'yhatda o\'tish</string>
    <string name="login_in">Tizimga kirish</string>
    <string name="student_name">O\'quvchining nomi</string>
    <string name="student_surname">O\'quvchining familiyasi</string>
    <string name="saqlash">Saqlash</string>
    <string name="student_phone">O\'quvchining telefon raqami</string>
    <string name="not_registered_registration">Ro\'yatdan o\'tmaganmisiz ?</string>
    <string name="Name">Nomi xato yozilgan</string>
    <string name="SurName">Familiya xato yozilgan\n</string>
    <string name="Phone">Telefon xato yozilgan</string>
    <string name="mustafo">Mustafo</string>
    <string name="rahim">Rahim</string>
    <string name="student_age">O\'quvchining yoshi</string>
    <string name="Age">Yosh xato kiritildi</string>
    <string name="course">Kurs</string>
    <string name="students">Students</string>
    <string name="java">Java</string>
    <string name="course_name">Kurs nomi</string>
    <string name="man">Man</string>
    <string name="error_course">Course xato yozilgan</string>
    <string name="welcome_to_this_app">Ilovamga xush kelibsiz!!!</string>
    <string name="student_qo_shish">Student qo\'shish</string>
    <string name="kurs_qo_shish">Kurs qo\'shish</string>
    <string name="ism">Ism</string>
    <string name="familiya">Familiya</string>
    <string name="telefon_raqami">Telefon raqami</string>
    <string name="jinsi">Jinsi</string>
    <string name="guruhi">Guruhi</string>
    <string name="yosh">Yosh</string>
    <string name="settings">Sozlamalar</string>
    <string name="password">Parol</string>
    <string name="email">Email</string>
    <string name="phone">Telefon raqam</string>
    <string name="name">Ism</string>
    <string name="error_email">Email xato kiritilgan\n</string>
    <string name="error_password">Parol xato kiritilgan</string>
    <string name="error_name">Ism xato yozilgan</string>
    <string name="haqida">Bu Davomat app ilovasi bo\'lib uning yordamida o\'quvchilarni davomat qilishingiz mumkun.\nBu ilovani Mustafo ishladi.\nYordamchilar: Abdulaziz, Lazizbek</string>
    <string name="davomi">mustaforahimov30@gmail.com</string>
    <string name="davomi2">Bu meni elektron pochtam 👆</string>
    <string name="davomi3">Yoki telegramim 👇</string>
    <string name="davomi4">https://t.me/mustafo_rahim_2009</string>
    <string name="davomi5">Aytgancha davomat qilish uchun studentni o\'nga yoki chapga suring:\nO\'nga sursangiz Darsda bor\nChapga sursangiz Darsda yo\'q\nHozircha bu ilovaning 1-versiyasi agar buni ko\'pchilik yuklasa 2-versiyasini chiqaraman\nFikrlar yoki takliflarni kutib qolaman !!!</string>
    <string name="jinsingizni_tanlang">Jinsingizni tanlang:</string>
    <string name="kursni_tanlang">Kursni tanlang:</string>
    <string name="edit">O\'zgartirish</string>
    <string name="error_couse">Kurs qo\'shing\n</string>
    <string name="chiqish">Chiqish</string>
    <string name="admin_name">Nom xato yozilgan</string>
    <string name="admin_phone">Raqam noto\'g\'ri terilgan</string>
    <string name="admin_password">Parol xato kiritildi</string>
    <string name="davomat">Davomat</string>
    <string name="_29_12_2023">29.12.2023</string>
    <string name="bor">Bor</string>
    <string name="yoq">Yo\'q</string>
    <string name="telefon_urish">Telefon urish</string>
    <string name="admin_email">Email xato kiritilgan</string>
</resources>