<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?selectableItemBackground"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@android:color/holo_green_dark"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mustafo"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rahim"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/davomat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bor"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_29_12_2023"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ln" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>